assets/css/style.css
@keyframes slideInFromLeft {
    0% {
      transform: translateX(-100%);
    }
    100% {
      transform: translateX(0);
    }
}


@media(min-width: 1025px){
    .main-col{
        height: 100vh;
    }

    .main-col:hover{
        width: 20%;
        overflow: hidden;
    }

    #third-col{
        position: fixed;
        margin-left: 50%;
        z-index: -1;
    }
}

@media(max-width: 1024px)
{
    .main-col{
        width: 100%;
    }
    .main-col:focus{
        height: 100vh;
        overflow: hidden;
    }

    .column-collapse{
        display: block !important;
    }

}

.float{
	position:fixed;
	width:60px;
	height:60px;
	bottom:40px;
	right:40px;
	background-color:#723D46;
	color:#FFF;
	border-radius:50px;
	text-align:center;
	box-shadow: 2px 2px 3px #222;
}

.my-float{
	margin-top:22px;
}

body{
    background-color: #472D30;
    color: #fff;
}

.main-col{
    color: #2b2b2b;
    transition-duration: 1s;
    transition-timing-function:cubic-bezier(0.2,0.5,0.3,1);
    animation: 1s ease-out 0s 1 slideInFromLeft;
}

.description{
    margin-right: -308px;
    text-align: center;
}

.main-content{
    margin-top: 0.25em;
    margin-bottom: 0.25em;
}

.play-content{
    padding: 10px;
}

#first-col{
    text-align: center;
    background-color: #FFE1A8;
}

#second-col{
    text-align: center;
    background-color: #C9CBA3;
}

#third-col{
    animation: 1s ease-out 0s 1 slideInFromLeft;
    text-align: center;
}

